Updated ImmutableList.of to List.of.